--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
-    <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Countdown Timer</title>
-        <link rel="stylesheet" href="../Countdown Timer/style.css">
+        <link rel="stylesheet" href="/style.css">
     </head>
     <body>
         <div class="Gift">
-            <img src="images (2) (5).jpeg" alt="Samsung" class="Gift-img">
+            <img src="/images (2) (5).jpeg" alt="Samsung" class="Gift-img">
             <div class="Main">
                 <div class="Text">
                     <p class="Text1"> SAMSUNG GALAXY S24 ULTRA GIVEAWAY</p>
